external css added

--- a/index.html
+++ b/index.html
@@ -10,35 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Danfo&display=swap" rel="stylesheet">
-
-    <style>
-        img{
-            width: 300px;
-            height: 300px;
-            border-radius: 50%;
-        }
-
-        li{
-            list-style: none;
-        }
-
-        .second{
-            list-style: disc;
-            color: red;
-            font-style: italic;
-            font-weight: bold;
-        }
-
-        #fourthImage{
-            width: 200px;
-            height: 200px;
-            border-radius: 20px;
-        }
-
-        h1, h3{
-           text-decoration: underline;
-           font-size: 50px;
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 style="font-size: 50px; color: tomato;  font-family: Danfo, serif;">Introduction to CSS</h1>
@@ -50,7 +22,7 @@
         <li class="second">Internal CSS</li>
         <li>External CSS</li>
     </ul>
-    <p style="line-height: 50px; word-spacing: 30px; letter-spacing: 10px;">
+    <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, porro similique! Alias maxime nesciunt laborum accusantium
        tenetur ipsum eius natus magnam, aperiam molestias ea. Molestias, earum nam laborum quibusdam adipisci similique porro,
        explicabo aliquid fugit perferendis rerum nihil laboriosam necessitatibus blanditiis veniam corrupti itaque vitae natus quos
@@ -59,11 +31,14 @@
        ipsa praesentium porro perspiciatis consequatur consequuntur fugit repellat, neque culpa expedita odit suscipit rerum
        blanditiis corrupti sint omnis tempora atque!
     </p>
-    <img style="width: 250px; height: 250px; border-radius: 50%;" src="https://images.pexels.com/photos/356056/pexels-photo-356056.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="laptop and accesories"><br>
+    <img  src="https://images.pexels.com/photos/356056/pexels-photo-356056.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="laptop and accesories"><br>
     <img src="https://images.pexels.com/photos/112460/pexels-photo-112460.jpeg?auto=compress&cs=tinysrgb&w=300" alt=""><br>
     <img src="https://images.pexels.com/photos/2399840/pexels-photo-2399840.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt=""><br>
     <img id="fourthImage" src="https://images.pexels.com/photos/17576302/pexels-photo-17576302/free-photo-of-interior-of-computer-tower.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt=""><br>
     <iframe width="1280" height="720" src="https://www.youtube.com/embed/WN4SfsjhUsk" title="Captcha Generator in HTML CSS &amp; JavaScript" frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div></div>
+    <div class="secondDiv"></div>
+    <div></div>
 </body>
 </html>
